update group api
