# src/router/admin/app.go
@@ -131,11 +131,9 @@ type updateAppReq struct {
 //	@Failure		403				{object}	inkstone.ClientError
 //	@Failure		500				{string}	empty
 func updateApp(c *inkstone.Context) {
-	var currentApp = c.MustGet("app").(*model.App)
-
 	param := new(updateAppParam)
 
-	if err := c.ShouldBindUri(param); err != nil || param.Id == int(currentApp.Id) {
+	if err := c.ShouldBindUri(param); err != nil {
 		c.AbortWithClientError(errors.ERR_BAD_REQUEST)
 		return
 	}
@@ -146,7 +144,8 @@ func updateApp(c *inkstone.Context) {
 		v.RegisterStructValidation(inkstone.ValidationNotAllFieldsZero, req)
 	}
 
-	if err := c.ShouldBindJSON(req); err != nil {
+	var currentApp = c.MustGet("app").(*model.App)
+	if err := c.ShouldBindJSON(req); err != nil || (req.ActiveToggle && param.Id == int(currentApp.Id)) {
 		c.AbortWithClientError(errors.ERR_BAD_REQUEST)
 		return
 	}
